// Source: https://android.googlesource.com/platform/frameworks/base/+/refs/heads/main/tools/aapt2/Configuration.proto
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package aapt.pb;

option java_package = "com.android.aapt";

message Configuration {
  enum LayoutDirection {
    LAYOUT_DIRECTION_UNSET = 0;
    LAYOUT_DIRECTION_LTR = 1;
    LAYOUT_DIRECTION_RTL = 2;
  }

  enum ScreenLayoutSize {
    SCREEN_LAYOUT_SIZE_UNSET = 0;
    SCREEN_LAYOUT_SIZE_SMALL = 1;
    SCREEN_LAYOUT_SIZE_NORMAL = 2;
    SCREEN_LAYOUT_SIZE_LARGE = 3;
    SCREEN_LAYOUT_SIZE_XLARGE = 4;
  }

  enum ScreenLayoutLong {
    SCREEN_LAYOUT_LONG_UNSET = 0;
    SCREEN_LAYOUT_LONG_LONG = 1;
    SCREEN_LAYOUT_LONG_NOTLONG = 2;
  }

  enum ScreenRound {
    SCREEN_ROUND_UNSET = 0;
    SCREEN_ROUND_ROUND = 1;
    SCREEN_ROUND_NOTROUND = 2;
  }

  enum WideColorGamut {
    WIDE_COLOR_GAMUT_UNSET = 0;
    WIDE_COLOR_GAMUT_WIDECG = 1;
    WIDE_COLOR_GAMUT_NOWIDECG = 2;
  }

  enum Hdr {
    HDR_UNSET = 0;
    HDR_HIGHDR = 1;
    HDR_LOWDR = 2;
  }

  enum Orientation {
    ORIENTATION_UNSET = 0;
    ORIENTATION_PORT = 1;
    ORIENTATION_LAND = 2;
    ORIENTATION_SQUARE = 3;
  }

  enum UiModeType {
    UI_MODE_TYPE_UNSET = 0;
    UI_MODE_TYPE_NORMAL = 1;
    UI_MODE_TYPE_DESK = 2;
    UI_MODE_TYPE_CAR = 3;
    UI_MODE_TYPE_TELEVISION = 4;
    UI_MODE_TYPE_APPLIANCE = 5;
    UI_MODE_TYPE_WATCH = 6;
    UI_MODE_TYPE_VRHEADSET = 7;
  }

  enum UiModeNight {
    UI_MODE_NIGHT_UNSET = 0;
    UI_MODE_NIGHT_NIGHT = 1;
    UI_MODE_NIGHT_NOTNIGHT = 2;
  }

  enum Touchscreen {
    TOUCHSCREEN_UNSET = 0;
    TOUCHSCREEN_NOTOUCH = 1;
    TOUCHSCREEN_STYLUS = 2;
    TOUCHSCREEN_FINGER = 3;
  }

  enum KeysHidden {
    KEYS_HIDDEN_UNSET = 0;
    KEYS_HIDDEN_KEYSEXPOSED = 1;
    KEYS_HIDDEN_KEYSHIDDEN = 2;
    KEYS_HIDDEN_KEYSSOFT = 3;
  }

  enum Keyboard {
    KEYBOARD_UNSET = 0;
    KEYBOARD_NOKEYS = 1;
    KEYBOARD_QWERTY = 2;
    KEYBOARD_TWELVEKEY = 3;
  }

  enum NavHidden {
    NAV_HIDDEN_UNSET = 0;
    NAV_HIDDEN_NAVEXPOSED = 1;
    NAV_HIDDEN_NAVHIDDEN = 2;
  }

  enum Navigation {
    NAVIGATION_UNSET = 0;
    NAVIGATION_NONAV = 1;
    NAVIGATION_DPAD = 2;
    NAVIGATION_TRACKBALL = 3;
    NAVIGATION_WHEEL = 4;
  }

  enum GrammaticalGender {
    GRAM_GENDER_UNSET = 0;
    GRAM_GENDER_NEUTER = 1;
    GRAM_GENDER_FEMININE = 2;
    GRAM_GENDER_MASCULINE = 3;
  }

  uint32 mcc = 1;
  uint32 mnc = 2;
  string locale = 3;
  LayoutDirection layout_direction = 4;
  uint32 screen_width = 5;
  uint32 screen_height = 6;
  uint32 screen_width_dp = 7;
  uint32 screen_height_dp = 8;
  uint32 smallest_screen_width_dp = 9;
  ScreenLayoutSize screen_layout_size = 10;
  ScreenLayoutLong screen_layout_long = 11;
  ScreenRound screen_round = 12;
  WideColorGamut wide_color_gamut = 13;
  Hdr hdr = 14;
  Orientation orientation = 15;
  UiModeType ui_mode_type = 16;
  UiModeNight ui_mode_night = 17;
  uint32 density = 18;
  Touchscreen touchscreen = 19;
  KeysHidden keys_hidden = 20;
  Keyboard keyboard = 21;
  NavHidden nav_hidden = 22;
  Navigation navigation = 23;
  uint32 sdk_version = 24;
  GrammaticalGender grammatical_gender = 26;
  string product = 25;
}
